--- a/Web/032/index.html
+++ b/Web/032/index.html
@@ -267,7 +267,7 @@
   })(document.getElementById('pinkboard'));
 </script>
 <div class="namebox">
-  <h1>余蓬溪&#10084;&#65039;小可爱</h1>
+  <h1>小可爱&#10084;&#65039;小可爱</h1>
 </div>
 </body>
 </html>
