--- a/Web/018/result.html
+++ b/Web/018/result.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title> 我爱你 ❤️</title>
+    <title> 我哈哈你 ❤️</title>
     <meta name="language" content="zh-CN">
     <meta name="github" content="https://github.com/sun0225SUN/Awesome-Love-Code">
     <meta name="describe" content="收集不易，您的star是我坚持的动力，同时也欢迎各位PR哦! ">
@@ -826,7 +826,7 @@
                                                                 <td><span><span
                                                                             class="c-index  c-index-hot1 c-gap-icon-right-small">1</span><a
                                                                             target="_self" href="javascript:;"
-                                                                            class="opr-toplist1-cut">我喜欢你
+                                                                            class="opr-toplist1-cut">大头鬼哈哈
                                                                         </a></span></td>
                                                                 <td class="opr-toplist1-right opr-toplist1-right-hot">
                                                                     70亿<i class="opr-toplist1-st c-icon "></i></td>
@@ -836,7 +836,7 @@
                                                                 <td><span><span
                                                                             class="c-index  c-index-hot2 c-gap-icon-right-small">2</span><a
                                                                             target="_self" href="javascript:;"
-                                                                            class="opr-toplist1-cut">遇见你的时候所有星星都砸到俺头上</a></span>
+                                                                            class="opr-toplist1-cut">遇见你的时候所有星星都砸到你头上</a></span>
                                                                 </td>
                                                                 <td class="opr-toplist1-right opr-toplist1-right-hot">
                                                                     9999万<i class="opr-toplist1-st c-icon "></i></td>
@@ -846,7 +846,7 @@
                                                                 <td><span><span
                                                                             class="c-index  c-index-hot3 c-gap-icon-right-small">3</span><a
                                                                             target="_self" href="javascript:;"
-                                                                            class="opr-toplist1-cut">遇见你，真好</a></span>
+                                                                            class="opr-toplist1-cut">遇见你，哈好</a></span>
                                                                 </td>
                                                                 <td class="opr-toplist1-right opr-toplist1-right-hot">
                                                                     521万<i class="opr-toplist1-st c-icon "></i></td>
@@ -874,7 +874,7 @@
                                 class="search_tool_si c-gap-left">站点内检索<i
                                     class="c-icon c-icon-triangle-down"></i></span></div>
                         <div class="nums">
-                            <span class="nums_text">百度为您找到相关结果为999个</span>
+                            <span class="nums_text">百度为您找到相关结果为3个</span>
                         </div>
                     </div>
                 </div>
@@ -883,13 +883,13 @@
                         data-click="{'rsv_bdr':'0' }">
                         <h3 class="t"><a
                                 data-click="{'F':'778317EA','F1':'9D73F1E4','F2':'6CA6DD6B','F3':'54E5263F','T':'1589442239','y':'FFB95FFF'}"
-                                href="javascript:;" target="_self">小孙同学</a></h3>
+                                href="javascript:;" target="_self">小可爱</a></h3>
                         <div class="c-row c-gap-top-small">
                             <div class="general_image_pic c-span6"><a class="c-img6" style="height:75px"
                                     href="javascript:;" target="_self"><img class="c-img c-img6" src="images/pic1.jpg"
                                         style="height:75px;"></a></div>
                             <div class="c-span18 c-span-last">
-                                <div class="c-abstract">没遇见你以前，总觉得生活无非就像现在这样无味；遇见你后发现这个世界上美好的事物原来还有这么多。</div>
+                                <div class="c-abstract">没遇见你以前，总觉得生活无非就像现在这样无味；遇见你后发现这个世界上的事物原来还有这么多。</div>
                                 <div class="f13"><a target="_self" href="javascript:;" class="c-showurl"
                                         style="text-decoration:none;">https://sunguoqi.com/&nbsp;</a>
                                 </div>
@@ -903,7 +903,7 @@
                         data-click="{'p1':'3','rsv_bdr':'0','fm':'albk',rsv_stl:''}">
                         <h3 class="t c-gap-bottom-small">
                             <a href="javascript:;" target="_self">
-                                <em>我喜欢你</em></a>
+                                <em>大头鬼哈哈</em></a>
                         </h3>
                         <div class="c-row">
                             <div class="op-bk-polysemy-video__wrap c-gap-bottom">
@@ -930,9 +930,9 @@
                                 </div>
                             </div>
                             <div class="c-span18 c-span-last">
-                                <p>“你最近是不是又胖了？”<br>
+                                <p>“你最近是不是头变大了？”<br>
                                     “没有啊，为什么这么说？”<br>
-                                    “那为什么在我心里的分量越来越重了？”</p>
+                                    “那为什么在我心里的地位越来越大了？”</p>
                                 <p>
                                     <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;"
                                         target="_self" title="可爱">可爱</a>
@@ -941,7 +941,7 @@
                                     <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;"
                                         target="_self" title="大方">大方</a>
                                     <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;"
-                                        target="_self" title="优雅">优雅</a>
+                                        target="_self" title="头大">头大</a>
                                     <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;"
                                         target="_self" title="安静">安静</a>
                                 </p>
@@ -999,9 +999,9 @@
                                     href="javascript:;" target="_self"><img class="c-img c-img6" src="images/pic3.jpg"
                                         style="height:75px;"></a></div>
                             <div class="c-span18 c-span-last">
-                                <div class="c-abstract">“我觉得你这个人不适合谈恋爱”<br>
+                                <div class="c-abstract">“我觉得你这个人头很大（说的是我）”<br>
                                     “为什么？”<br>
-                                    “适合结婚。</div>
+                                    “。</div>
                                 <div class="f13"><a target="_self" href="javascript:;" class="c-showurl"
                                         style="text-decoration:none;">
                                         <style>
@@ -1101,7 +1101,7 @@
                                 </tr>
                                 <tr>
                                     <td class="op-tieba-general-firsttd op-tieba-general-mainpl"><a href="javascript:;"
-                                            target="_self" class="op-tieba-general-linktxt">一辈子</a>
+                                            target="_self" class="op-tieba-general-linktxt">头大一辈子</a>
                                     </td>
                                     <td class="op-tieba-general-graycolor"><span class="c-gap-right-small">点击：<i
                                                 class="op-mthread1-clicknum">1314</i></span></td>
@@ -1121,7 +1121,7 @@
                                 </tr>
                                 <tr>
                                     <td class="op-tieba-general-firsttd op-tieba-general-mainpl"><a href="javascript:;"
-                                            target="_self" class="op-tieba-general-linktxt">三生三世</a>
+                                            target="_self" class="op-tieba-general-linktxt">尼</a>
                                     </td>
                                     <td class="op-tieba-general-graycolor"><span class="c-gap-right-small">点击：<i
                                                 class="op-mthread3-clicknum">19</i></span></td>
@@ -1131,7 +1131,7 @@
                             </tbody>
                         </table>
                         <div class="op-tieba-general-lookmore op-tieba-general-mainpl"><a href="javascript:;"
-                                target="_self"><em>期待更多我们的故事</em></a>
+                                target="_self"><em></em></a>
                         </div>
                         <div class="c-showurl op-tieba-general-mainpl">
                             <span class="c-showurl">i.love.you</span><span class="c-tools"
@@ -1196,7 +1196,7 @@
                                 </th>
                                 <td></td>
                                 <th>
-                                    <a href="javascript:;" target="_self">爱上你
+                                    <a href="javascript:;" target="_self">
                                         不需要理由</a>
                                 </th>
                                 <td></td>
@@ -1266,7 +1266,7 @@
     <script src="sakura.js"></script>
     <script>
         let loveWords = [
-            '如果我不讨你喜欢，你直接爱上我好了',
+            '',
             '打你名字再多遍都不费劲，输入法会自己跑出来',
             '你喜欢星星吗？我才不摘给你，我要把它们藏进我的眼睛，每天对着你blingbling',
             '你笑的时候真好看，像月牙里装满了星星',
